--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -218,7 +218,7 @@ input[type = text]{
 .block2{
    margin-top: 30px;
   height: 788px;
-   background-image: url(/assets/img/block2.jpg);
+   background-image: url(../img/block2.jpg);
   display: flex;
   background-size: cover;
    color: #fff;
