--- a/assets/css/submenu.css
+++ b/assets/css/submenu.css
@@ -83,7 +83,7 @@ body{
 } */
 
 #content>.img{
-    background-image: url(/assets/img/theriver.png);
+    background-image: url(../img/theriver.png);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -210,7 +210,7 @@ table{
 
 .footer-end{
     background-color: #414042;
-    background-image: url(/assets/img/footerbg.jpg);
+    background-image: url(../img/footerbg.jpg);
 }
 
 .footer-cover{
